package design.patterns.abstractfactory;

public interface AbstractFactory {
    ProductA createProductA();
    ProductB createProductB();
}
