package design.patterns.abstractfactory;

public class ProductA1 implements ProductA {
}
