package design.patterns.abstractfactory;

public class ProductA2 implements ProductA {
}
