package design.patterns.abstractfactory;

public class ProductB1 implements ProductB {
}
