package design.patterns.abstractfactory;

public class ProductB2 implements ProductB {
}
